--- a/backend/src/generate_embeddings/requirements.txt
+++ b/backend/src/generate_embeddings/requirements.txt
@@ -1,6 +1,7 @@
 boto3==1.28.57
 botocore==1.31.57
 faiss-cpu==1.7.4
-langchain==0.1.0
+langchain==0.1.14
+langchain-community==0.0.31
 pypdf==3.17.0
 urllib3
