--- a/backend/src/generate_response/requirements.txt
+++ b/backend/src/generate_response/requirements.txt
@@ -2,5 +2,6 @@ boto3==1.28.57
 botocore==1.31.57
 faiss-cpu==1.7.4
 BeautifulSoup4==4.12.2
-langchain==0.1.0
+langchain==0.1.14
+langchain-community==0.0.31
 urllib3
