--- a/backend/template.yaml
+++ b/backend/template.yaml
@@ -339,7 +339,7 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref Api
-            Path: /{documentid}/{conversationid}
+            Path: /chat
             Method: POST
 
   AmplifyApp:
