--- a/backend/src/generate_response/requirements.txt
+++ b/backend/src/generate_response/requirements.txt
@@ -4,5 +4,6 @@ faiss-cpu==1.7.4
 BeautifulSoup4==4.12.2
 langchain==0.1.14
 langchain-community==0.0.31
+langchain-core==0.1.42
 langchainhub==0.1.15
 urllib3
